# rednafi.com

./: .editorconfig  .envrc  .gitattributes  .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  .prettierignore  Brewfile  Brewfile.lock.json  CNAME  LICENSE  Makefile  README.md  cgi-script.sh  config.yml  foo.py  go.mod  go.sum  grpctest.go  main.go  main_test.go  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  script.py  script.sh  test_foo.py  test_script.py  wrangler.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  hugo.yml  lint.yml  update-hugo.yml
content/: about.md  archive.md  archives.md  blogroll.md  contacts.md  elsewhere.md  reads.md  search.md  uses.md
content/database/: random_choice_in_sqlite.md
content/databases/: random_choice_in_sqlite.md
content/feed/: 2024.md  2025.md
content/go/: anemic_stack_traces.md  app_structure.md  capture_console_output.md  circuit_breaker.md  configure_options.md  deferred_teardown_closure.md  di_frameworks_bleh.md  dummy_load_balancer.md  dysfunctional_options_pattern.md  early_return_and_goroutine_leak.md  func_types_and_smis.md  gateway_pattern.md  generic_retry_function.md  interface_guards.md  inversion_of_instrumentation.md  io_reader_signature.md  lifecycle_management_in_tests.md  limit_goroutines_with_buffered_channels.md  middleware_vs_delegation.md  mux_embedded_delegation.md  nil_interface.md  nil_interface_comparison.md  omit_dev_dependencies_in_binaries.md  (+16 more)
i18n/: en.yaml
layouts/: 404.html
svc/: __init__.py  log.py  main.py  middleware.py  view.py
(+208 files in other folders)
